tests/baselines/reference/propertyAssignmentIPC1.errors.txt
tests/cases/compiler/propertyAssignmentIPC1.ts(17,1): error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
tests/cases/compiler/propertyAssignmentIPC1.ts(18,1): error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
tests/cases/compiler/propertyAssignmentIPC1.ts(20,1): error TS2322: Type '55' is not assignable to type 'undefined'.


==== tests/cases/compiler/propertyAssignmentIPC1.ts (3 errors) ====
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
        absent?: number;
    } with {
        present(text);
        or(and(present(userid), not(present(screenname))),
            and(not(present(userid)), present(screenname)));
        not(present(absent));
    }
    
    
    let msg: PrivateMessage = {text: "Hello", userid: 123};
    msg.text = "Hi!"; //OK
    msg.text = undefined; //NOK
    msg.userid = 22; //NOK
    ~~~~~~~~~~
!!! error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
    msg.userid = undefined; //NOK
    ~~~~~~~~~~
!!! error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
    msg.absent = undefined; //OK
    msg.absent = 55; //NOK
    ~~~~~~~~~~
!!! error TS2322: Type '55' is not assignable to type 'undefined'.
    
    